--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
     "@reduxjs/toolkit": "^2.6.1",
+    "fs": "^0.0.1-security",
     "next": "^15.2.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
